	this is what it really does.

	* src/fit.c (setvar): Simplify existing code by using add_udv_by_name.

	* src/set.c (set_termoptions): Update comment explaining this routine.

	* src/plot3d.c (eval_3dplots): Surface plots are no longer the only
	plot style that can use four 'using' specs; remove the error check 
	that incorrectly prevents this.

2004-09-09  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Update the comment on plot-time evaluation of 
	PostScript language level support.

2004-09-09  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/cgm.trm, term/eepic.trm, term/emf.trm,
	term/epslatex.trm, term/post.trm: Fix misprints in gnuplot manual (#15).

2004-09-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (process_event) term/x11.trm: Provide a command line
	option (-ctrlq) and an X resource (gnuplor*ctrlq: true) that disable
	trapping the 'q' and '<space>' keystrokes in the plot window, instead
	trap <ctrl>q and <ctrl><space>.  This option allows the 'q' and 
	'<space>' keystrokes to be treated like all other keystrokes during 
	"pause mouse key" and other mousing operations.


2004-09-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* configure.in (AC_PREREQ): Bumped to 2.58, to avoid problems with
	missing AC_HEADER_STDBOOL.
	
2004-09-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* configure.in: The --enable-image option requires general binary data
	file code. Ensure --disable-binary-data-file is not in the option list
	if only --enable-image is activated.

2004-09-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Added #defines
	for "with image".

2004-09-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/breaders.c src/datafile.c: Get rid of compiler warnings.

2004-09-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c: Changed default value of datafile endianess after